--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -102,4 +102,4 @@ jobs:
 
       - id: test
         name: Run Unit Tests
-        run: cargo test --tests --benches --examples --workspace --exclude integration --all-targets --all-features
+        run: cargo test --features "colored/no-color" --tests --benches --examples 
