--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,17 @@ termtree = "0.4"
 regex-lite = "0.1"
 indexmap = "2"
 colored = "2"
+serde = { version = "1", features = ["derive"], optional = true }
+serde_json = { version = "1", optional = true }
+
+[features]
+default = ["serde"]
+serde = ["dep:serde", "indexmap/serde", "serde_json"]
+
+[[test]]
+name = "serde"
+path = "./tests/serde.rs"
+required-features = ["serde"]
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
